erDiagram
    ESTUDIANTE ||--o{ NOTA : registra
    CURSO ||--o{ ASIGNACION_ACADEMICA : asigna
    DOCENTE ||--o{ ASIGNACION_ACADEMICA : imparte
    ASIGNATURA ||--o{ ASIGNACION_ACADEMICA : contiene
    ASIGNACION_ACADEMICA ||--o{ HORARIO : programa

    ESTUDIANTE {
        int idEstudiante PK
        string nombre_Estudiante
        int nota_Uno
        int nota_Dos
        int nota_Tres
        int nota_Cuatro
        decimal promedio
        string resultado_Cualitativo
    }

    CURSO {
        int idCurso PK
        string grado
        string curso
        enum jornada
        int numero_estudiantes
    }

    DOCENTE {
        int idDocente PK
        string documento UK
        string nombres
        string apellidos
        enum tipo_contrato
        enum jornada
        set dias_trabajo
    }

    ASIGNATURA {
        int idAsignatura PK
        string nombre_asignatura
        int intensidad_horaria
    }

    ASIGNACION_ACADEMICA {
        int idAsignacion PK
        int idDocente FK
        int idCurso FK
        int idAsignatura FK
        unique "idDocente, idCurso, idAsignatura"
    }

    HORARIO {
        int idHorario PK
        int idAsignacion FK
        enum dia_semana
        time hora_inicio
        time hora_fin
        index "idAsignacion, dia_semana"
    }
